--- a/src/app/modules/docente-capacitador/modalidad-curso/pages/modalidad-curso.component.html
+++ b/src/app/modules/docente-capacitador/modalidad-curso/pages/modalidad-curso.component.html
@@ -1,1 +1,48 @@
-<p>modalidad-curso works!</p>
+<div class="container" style="background-color: #ffffff;">
+    <div class="mt-4">
+      <h3 style="text-align: center;">{{ isNew ? 'Nueva modalidad de curso' : 'Editar Modalidad de curso' }}</h3>
+      <form #modalidadForm="ngForm" (ngSubmit)="submitForm()">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="mcuNombre">Nombre</label>
+              <input type="text" class="form-control" id="mcuNombre" name="mcuNombre" [(ngModel)]="modalidadSeleccionada.mcuNombre" required>
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">{{ isNew ? 'Crear' : 'Guardar' }}</button>
+      </form>
+    </div>
+    <br>
+    <br>
+    <div class="form-group">
+      <label for="buscar">Buscar:</label>
+      <input type="text" class="form-control" id="buscar" name="buscar" [(ngModel)]="filtro" (keyup)="actualizarFiltro()">
+    </div>
+    <br>
+    <h2>Modalidades</h2>
+    <table class="table">
+      <thead>
+        <tr class="bg-primary text-light">
+          <th scope="col">Nombre</th>
+          <th scope="col">Estado</th>
+          <th scope="col">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <ng-container *ngFor="let modalidad of modalidades">
+          <tr *ngIf="modalidad.mcuNombre.toLowerCase().includes(filtro.toLowerCase())">
+          <td>{{ modalidad.mcuNombre }}</td>
+          <td>{{ modalidad.mcuEstado ? 'Activo' : 'Inactivo' }}</td>
+          <td>
+            <button class="btn btn-primary" (click)="editarModalidad(modalidad)">Editar</button>
+            <button class="btn btn-danger" (click)="eliminarModalidad(modalidad.mcuId)">Eliminar</button>
+          </td>
+          </tr>
+        </ng-container>
+          </tbody>
+          
+            </table>
+            
+          </div>
+  
