--- a/src/app/modules/docente-capacitador/register-participante/pages/register-participante/register-participante.component.html
+++ b/src/app/modules/docente-capacitador/register-participante/pages/register-participante/register-participante.component.html
@@ -1,1 +1,162 @@
-<p>register-participante works!</p>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<br>
+<div class="container1" *ngIf="showContainer1">
+    <div class="row">
+        <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
+            <div class="card bg-c-blue order-card"
+                (click)="showContainer2 = true; showContainer1 = false; mostrarFichas(curso.curId)">
+                <div class="card-block">
+                    <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
+                    <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
+                    </h2>
+                    <div style="margin-bottom: 10px;">
+                        <h3 class="val"><span class="f-right">{{curso.curFechainicio | date:
+                                'dd/MM/yyyy'}}</span>Inicia</h3>
+                        <h3 class="val"><span class="f-right">{{curso.curFechafin | date:
+                                'dd/MM/yyyy'}}</span>Termina</h3>
+                    </div>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container2" *ngIf="showContainer2">
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Cursos</a></li>
+            <li class="breadcrumb-item"><a>Registrar Notas</a></li>
+        </ol>
+    </nav>
+    <!-- /Breadcrumb -->
+    <div class="main-body">
+        <div class="row">
+            <div class="col-lg-4">
+
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                                class="rounded-circle" width="150">
+                            <div class="mt-3">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                    class="bi bi-award-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z" />
+                                    <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
+                                </svg>
+                                <h4>Participante</h4>
+                                <p class="text-secondary mb-1">{{fichaInscripcion.finPersona?.nombre}}
+                                    {{fichaInscripcion.finPersona?.apellido}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 style="text-align: center;">Registro Participante</h4>
+                        <br>
+                        <form>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Cedula</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" id="inputCedula"
+                                        placeholder="Ingrese el nombre del programa" name="cedula"
+                                        value="{{fichaInscripcion.finPersona?.cedula}}">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Correo</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" id="inputemail"
+                                        placeholder="Ingrese la nota del 1er Parcial" name="email"
+                                        value="{{fichaInscripcion.finPersona?.email}}">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Direccion</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" id="direccion"
+                                        placeholder="Ingrese la nota Final" name="direccion"
+                                        value="{{fichaInscripcion.finPersona?.direccion}}">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Telefono</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="number" class="form-control" id="inputPromedio"
+                                        placeholder="Ingrese la nota del 1er Parcial" name="promedio"
+                                        value="{{fichaInscripcion.finPersona?.telefono}}">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Aprobación</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <select class="form-control" id="inputObservaciones" name="Observaciones"
+                                        [(ngModel)]="fichaInscripcion.finAprobacion">
+                                        <option *ngFor="let estado of estados" [value]="estado.value">{{ estado.label }}
+                                        </option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-sm-3"></div>
+                                <div class="col-sm-9 text-secondary">
+                                    <Span></Span> <button (click)="actualizarficha(fichaInscripcion)">Guardar Cambios</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <br><br>
+    <!-- Tablaaaaaa -->
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Estudiante</th>
+                <th scope="col">Cedula</th>
+                <th scope="col">Nivel Academico</th>
+                <th scope="col">Estado</th>
+                <th scope="col">editar</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let ficha of fichaList">
+                <th>{{ ficha.finId }}</th>
+                <td>{{ ficha.finPersona.nombre +' '+ ficha.finPersona.apellido }}</td>
+                <td>{{ ficha.finPersona.cedula}}</td>
+                <td>{{ ficha.finPersona.nivelintruccion }}</td>
+                <td>{{ estadosAprobacion[ficha.finAprobacion] }}</td>
+                <td>
+                    <button type="button" class="btn btn-primary" (click)="editarAprobacion(ficha)">
+                        Editar</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
