--- a/src/app/modules/participantes/apli-cursos/pages/apli-cursos/apli-cursos.component.html
+++ b/src/app/modules/participantes/apli-cursos/pages/apli-cursos/apli-cursos.component.html
@@ -2,32 +2,36 @@
 
 <br>
 <div class="row">
-        <div class="col-md-4 col-xl-3" *ngFor="let curso of fichasAcepList">
-            <div class="card bg-c-blue order-card">
-                <div class="card-block">
-                    <div *ngIf="curso.finAprobacion==0">
-                        <h6 class="m-b-20">Codigo: {{curso.finCurso.curCodigo}}
-                            <span class="f-right" style="color: rgb(240, 255, 30);">Pendiente</span>
-                        </h6>
-                    </div>
-                    <div *ngIf="curso.finAprobacion==2">
-                        <h6 class="m-b-20">Codigo: {{curso.finCurso.curCodigo}}
-                            <span class="f-right" style="color: red;">Rechazado</span>
-                        </h6>
-                    </div>
-                    <h2 class="text-right"><i
-                            class="fa fa-graduation-cap f-left"></i><span>{{curso.finCurso.curNombre}}</span>
-                    </h2>
-                    <div style="margin-bottom: 10px;">
-                        <h3 class="val"><span class="f-right">{{curso.finCurso.curFechainicio | date:
-                                'dd/MM/yyyy'}}</span>Inicia</h3>
-                        <h3 class="val"><span class="f-right">{{curso.finCurso.curFechafin | date:
-                                'dd/MM/yyyy'}}</span>Termina</h3>
-                    </div>
-                    <div style="margin-bottom: 10px;">
-                    </div>
+    <div class="col-md-4 col-xl-3" *ngFor="let curso of fichasAcepList">
+        <div class="card bg-c-blue order-card">
+            <div class="card-block">
+                <div *ngIf="curso.finAprobacion==0">
+                    <h6 class="m-b-20">Codigo: {{curso.finCurso.curCodigo}}
+                        <span class="f-right" style="color: rgb(240, 255, 30);">Pendiente</span>
+                    </h6>
+                </div>
+                <div *ngIf="curso.finAprobacion==2">
+                    <h6 class="m-b-20">Codigo: {{curso.finCurso.curCodigo}}
+                        <span class="f-right" style="color: rgb(255, 174, 0);">Correccion</span>
+                    </h6>
+                </div>
+                <div *ngIf="curso.finAprobacion==3">
+                    <h6 class="m-b-20">Codigo: {{curso.finCurso.curCodigo}}
+                        <span class="f-right" style="color: red;">Rechazado</span>
+                    </h6>
+                </div>
+                <h2 class="text-right"><i
+                        class="fa fa-graduation-cap f-left"></i><span>{{curso.finCurso.curNombre}}</span>
+                </h2>
+                <div style="margin-bottom: 10px;">
+                    <h3 class="val"><span class="f-right">{{curso.finCurso.curFechainicio | date:
+                            'dd/MM/yyyy'}}</span>Inicia</h3>
+                    <h3 class="val"><span class="f-right">{{curso.finCurso.curFechafin | date:
+                            'dd/MM/yyyy'}}</span>Termina</h3>
+                </div>
+                <div style="margin-bottom: 10px;">
                 </div>
             </div>
         </div>
-
+    </div>
 </div>
